# skILS

./: CMakeLists.txt  skils.cc
interface/: example.capnp  example.capnp.c++  example.capnp.h
scripts/: analyze.py  annotate.py  coordinates.json
